delete button update

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <app-filter (emitSelectedFilter)="receiveCategory($event)">
 </app-filter>
-<app-search></app-search>
-<app-note [selectedCategoryId]="selectedCategoryId"></app-note>
+<app-search (emitSearchedTitle)="receiveTitle($event)"></app-search>
+<app-note [selectedCategoryId]="selectedCategoryId" [searchedTitle]="searchedTitle"></app-note>
 <app-tools></app-tools>
